fix overflow on landing icon

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,7 +37,7 @@
 .screen {
   display: block;
   position: absolute;
-  width: 60%;
+  width: 69%;
   bottom: 0;
   right: 0;
   z-index: 2;
